# phosphorous

./: README.md
backend/: .gitignore  README.md  app.py  chatController.py  database.py  example.py  functions.py  models.py  pyproject.toml
frontend/: README.md  package.json  pnpm-lock.yaml  settings.gradle.kts
frontend/.fleet/: receipt.json
frontend/composeApp/: build.gradle.kts
frontend/composeApp/src/androidMain/kotlin/team/lm/phosphorous/: MainActivity.kt
frontend/composeApp/src/androidMain/res/values/: strings.xml
frontend/composeApp/src/commonMain/kotlin/: App.kt
frontend/composeApp/src/desktopMain/kotlin/: main.kt
frontend/gradle/: libs.versions.toml
frontend/src-tauri/: tauri.conf.json
