[tool.poetry]
name = "phosphorous-backend"
version = "0.1.0"
description = ""
authors = ["re2cc <42478705+re2cc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.18"
fastapi = "^0.111.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
